# ChangeLog for app-editors/nano
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.191 2008/06/16 03:39:15 josejx Exp $

  16 Jun 2008; Joseph Jezak <josejx@gentoo.org> nano-2.1.1-r1.ebuild:
  Marked ppc/ppc64 stable.

  12 May 2008; Markus Rothe <corsair@gentoo.org> nano-2.1.1.ebuild:
  Stable on ppc64

  10 May 2008; Mike Frysinger <vapier@gentoo.org>
  +files/nano-2.1.0-disable-speller.patch, nano-2.1.0.ebuild,
  nano-2.1.1.ebuild, nano-2.1.1-r1.ebuild:
  Fix building with USE=-spell #221219 by Jan.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> nano-1.2.5.ebuild,
  nano-1.3.12-r1.ebuild, nano-2.0.7.ebuild, nano-2.1.0.ebuild,
  nano-2.1.1.ebuild, nano-2.1.1-r1.ebuild:
  Fix spell configure flag: it is --enable-speller, not --enable-spell.

*nano-2.1.1-r1 (10 May 2008)

  10 May 2008; Mike Frysinger <vapier@gentoo.org> +files/awk.nanorc,
  +files/css.nanorc, +files/xml.nanorc, +nano-2.1.1-r1.ebuild:
  Add awk syntax #220821 by Donnie Berkholz and xml/css #163723 by Jan
  Vansteenkiste.

  01 May 2008; Raúl Porcel <armin76@gentoo.org> nano-2.1.1.ebuild:
  alpha/ia64/sparc/x86 stable

*nano-2.1.1 (02 Apr 2008)

  02 Apr 2008; Mike Frysinger <vapier@gentoo.org> +nano-2.1.1.ebuild:
  Version bump.

  29 Mar 2008; Mike Frysinger <vapier@gentoo.org> nano-2.1.0.ebuild:
  Bind the color/multibuffer/nanorc options to USE=-minimal #214132 by John SJ
  Anderson.

*nano-2.1.0 (19 Mar 2008)

  19 Mar 2008; Mike Frysinger <vapier@gentoo.org> +nano-2.1.0.ebuild:
  Version bump.

  26 Feb 2008; Richard Freeman <rich0@gentoo.org> nano-2.0.7.ebuild:
  amd64 stable - 211150

  23 Feb 2008; Brent Baude <ranger@gentoo.org> nano-2.0.7.ebuild:
  stable ppc, bug 211150

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> nano-2.0.7.ebuild:
  Stable on ppc64

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> nano-2.0.7.ebuild:
  Stable for HPPA too.
